# negotiation-pilot

./: .gitignore  README.md  package-lock.json
backend/: README.md  api.py  example.py  main.py  models.py  pyproject.toml  run_websocket_test.py  test_websocket.py
backend/mcts/: __init__.py  llm.py  node.py  search.py  viz.py
frontend/: .env.example  .gitignore  middleware.ts  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/(auth)/: auth.ts
frontend/app/api/authenticate/: route.ts
frontend/app/api/chat/: route.ts
frontend/app/api/history/: route.ts
frontend/app/api/vote/: route.ts
frontend/app/chat/: layout.tsx  page.tsx
frontend/app/chat/[id]/: chat-content.tsx  page.tsx
frontend/app/profile/: page.tsx
frontend/artifacts/: actions.ts
frontend/components/: app-sidebar.tsx  chat-header.tsx  login-or-signup-form.tsx  mcts-visualization.tsx  message-editor.tsx  model-selector.tsx  negotiation-analysis.tsx  profile.tsx  sidebar-history.tsx  sidebar-user-nav.tsx  stytch-provider.tsx
frontend/components/ui/: card.tsx  progress.tsx  sidebar.tsx
frontend/hooks/: use-chat-visibility.ts  use-mcts-websocket.ts
frontend/lib/: load-stytch.ts  types.ts  urlUtils.ts
frontend/lib/db/: queries.ts  schema.sql  schema.ts
frontend/lib/hooks/: use-mcts-websocket.ts
