[project]
name = "negotiation-copilot"
version = "0.1.0"
description = "AI-powered negotiation copilot"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "together>=0.2.8",
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "pydantic>=2.6.1",
    "graphviz>=0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["mcts"]

[tool.hatch.build]
include = [
    "mcts/**/*.py",
    "*.py",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
